# COMP3520GP

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  migrate_data_to_workspace.sh  pyproject.toml  sync_raw_md_to_content.sh
docs/: MEMORY.md  PYTHON_SDK.md  WEBSOCKET.md
nanobot/: __init__.py  nanobot.py
nanobot/agent/: __init__.py  autocompact.py  context.py  hook.py  loop.py  memory.py  research.py  runner.py  skills.py  subagent.py
nanobot/agent/tools/: __init__.py  base.py  cron.py  file_state.py  filesystem.py  mcp.py  message.py  notebook.py  rag.py  rag_grep.py  registry.py  search.py  shell.py  spawn.py  web.py
nanobot/api/: server.py
nanobot/channels/: discord.py  email.py  feishu.py  manager.py  matrix.py  qq.py  telegram.py  websocket.py  wecom.py  weixin.py  whatsapp.py
nanobot/cli/: commands.py  stream.py
nanobot/command/: builtin.py
nanobot/config/: loader.py  schema.py
nanobot/cron/: service.py
nanobot/providers/: __init__.py  anthropic_provider.py  azure_openai_provider.py  base.py  github_copilot_provider.py  openai_codex_provider.py  openai_compat_provider.py  registry.py
nanobot/providers/openai_responses/: parsing.py
nanobot/security/: network.py
nanobot/session/: manager.py
nanobot/skills/: README.md
nanobot/skills/official-web-ingest/: SKILL.md
nanobot/skills/rag/: SKILL.md
nanobot/skills/skill-creator/: SKILL.md
nanobot/templates/: TOOLS.md
nanobot/templates/agent/: dream_phase1.md  dream_phase2.md  evaluator.md  identity.md  skills_section.md
nanobot/utils/: evaluator.py  gitstore.py  helpers.py  restart.py  runtime.py  searchusage.py
tests/: test_build_status.py  test_nanobot_facade.py  test_openai_api.py  test_rag_tools.py
tests/agent/: test_auto_compact.py  test_consolidator.py  test_context_prompt_cache.py  test_dream.py  test_hook_composite.py  test_loop_consolidation_tokens.py  test_loop_save_turn.py  test_memory_store.py  test_onboard_logic.py  test_research.py  test_runner.py  test_session_manager_history.py  test_skills_loader.py  test_task_cancel.py
tests/channels/: test_channel_manager_delta_coalescing.py  test_channel_plugins.py  test_discord_channel.py  test_email_channel.py  test_feishu_reaction.py  test_feishu_streaming.py  test_matrix_channel.py  test_qq_media.py  test_telegram_channel.py  test_websocket_channel.py  test_websocket_integration.py  test_wecom_channel.py  test_weixin_channel.py  test_whatsapp_channel.py
tests/cli/: test_cli_input.py  test_commands.py  test_restart_command.py
tests/command/: test_builtin_research.py
tests/config/: test_config_migration.py  test_env_interpolation.py  test_research_config.py
tests/cron/: test_cron_service.py  test_cron_tool_list.py
tests/providers/: test_azure_openai_provider.py  test_enforce_role_alternation.py  test_litellm_kwargs.py  test_openai_responses.py  test_provider_retry.py  test_provider_sdk_retry_defaults.py  test_providers_init.py
tests/tools/: test_edit_enhancements.py  test_exec_env.py  test_filesystem_tools.py  test_mcp_tool.py  test_message_tool_suppress.py  test_read_enhancements.py  test_search_tools.py  test_tool_registry.py  test_tool_validation.py  test_web_search_tool.py
tests/utils/: test_restart.py  test_searchusage.py  test_strip_think.py
